Add plotly plot.

--- a/flow_pattern.ipynb
+++ b/flow_pattern.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def calculate_flow_pattern_transition(ρ, μ, σ, D, θ, k_s, interface, Nt=6, n=40, nc=5):\n",
+    "def calculate_flow_pattern_transition(ρ, μ, σ, D, θ, k_s, interface, Nt=6, n=40, nc=5, Tr=None, E_Tr=None):\n",
     "    \"\"\"\n",
     "    Nt = 6  # Number of Transition\n",
     "    n  = 40 # Number of points\n",
@@ -57,15 +57,13 @@
     "    \"\"\"\n",
     "    prop = [ρ[0], μ[0], σ, ρ[1], μ[1], D, θ, k_s, interface]\n",
     "    \n",
-    "\n",
-    "\n",
     "    # Output Variables\n",
-    "    Tr   = np.zeros((n*nc, Nt*2), dtype=np.float64) # Transition Matrix\n",
-    "    E_Tr = np.ones((n*nc, Nt  ), dtype=np.int)      # Error Matrix\n",
-    "    \n",
-    "    # This is important!\n",
-    "    Tr   = np.asfortranarray(Tr)\n",
-    "    E_Tr = np.asfortranarray(E_Tr)\n",
+    "    if Tr is None:\n",
+    "        Tr   = np.zeros((n*nc, Nt*2), dtype=np.float64) # Transition Matrix\n",
+    "        Tr   = np.asfortranarray(Tr) # This is important!\n",
+    "    if E_Tr is None:\n",
+    "        E_Tr = np.ones((n*nc, Nt  ), dtype=np.int)      # Error Matrix \n",
+    "        E_Tr = np.asfortranarray(E_Tr) # This is important!\n",
     "    \n",
     "    time = c_double(0.0)\n",
     "\n",
@@ -85,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -117,13 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "099cb2f940b346eb80029f907295ad90"
+       "model_id": "e0533cddc2284321a25f6b71f4fe82b1"
       }
      },
      "metadata": {},
@@ -136,6 +134,15 @@
     "import matplotlib\n",
     "from buttons import *\n",
     "from ipywidgets import interact\n",
+    "\n",
+    "Nt=6\n",
+    "n=40\n",
+    "nc=5\n",
+    "Tr   = np.zeros((n*nc, Nt*2), dtype=np.float64) # Transition Matrix\n",
+    "Tr   = np.asfortranarray(Tr) # This is important!\n",
+    "E_Tr = np.ones((n*nc, Nt  ), dtype=np.int)      # Error Matrix \n",
+    "E_Tr = np.asfortranarray(E_Tr) # This is important!\n",
+    "\n",
     "\n",
     "@interact(\n",
     "    # Density\n",
@@ -179,7 +186,7 @@
     "    μ   = [μ_L, μ_G]\n",
     "    θ = np.deg2rad(θ) # [rad]\n",
     "\n",
-    "    transition_points, error_matrix = calculate_flow_pattern_transition(ρ, μ, σ, D, θ, k_s, interface)\n",
+    "    transition_points, error_matrix = calculate_flow_pattern_transition(ρ, μ, σ, D, θ, k_s, interface, Tr=Tr, E_Tr=E_Tr)\n",
     "\n",
     "    for i in range(error_matrix.shape[1]):\n",
     "        x = transition_points[error_matrix[:, i] == 0, 2*i  ]\n",
@@ -212,6 +219,99 @@
     "    plt.legend(facecolor='w', fontsize='x-large')\n",
     "\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e3755560a627496eb852c7754cf629f1"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from plotly.offline import init_notebook_mode, iplot\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "init_notebook_mode(connected=True)\n",
+    "\n",
+    "@interact(\n",
+    "    # Density\n",
+    "    ρ_L=ρ_L_button,   \n",
+    "    ρ_G=ρ_G_button,    \n",
+    "    # Viscosity\n",
+    "    μ_L=μ_L_button,\n",
+    "    μ_G=μ_G_button,    \n",
+    "    # Surface Tension\n",
+    "    σ=σ_button,    \n",
+    "    # Pipe Diameter\n",
+    "    D=D_button,    \n",
+    "    # Pipe Inclination\n",
+    "    θ=θ_button,\n",
+    "    # Pipe Roughness\n",
+    "    k_s=k_s_button,    \n",
+    "    interface=interface_button\n",
+    ")\n",
+    "def plotly_transition_points(ρ_L, ρ_G, μ_L, μ_G, σ, D, θ, k_s, interface):\n",
+    "    labels = ['Stratified, Non-Stratified Flow',\n",
+    "              'Annular Flow',\n",
+    "              'Stratified Smooth-Wavy Flow',\n",
+    "              'Dispersed Bubble Flow',\n",
+    "              'Bubble Flow', 'Other']\n",
+    "\n",
+    "    ρ   = [ρ_L, ρ_G]\n",
+    "    μ   = [μ_L, μ_G]\n",
+    "    θ = np.deg2rad(θ) # [rad]\n",
+    "\n",
+    "    transition_points, error_matrix = calculate_flow_pattern_transition(ρ, μ, σ, D, θ, k_s, interface, Tr=Tr, E_Tr=E_Tr)\n",
+    "\n",
+    "    data = []\n",
+    "    for i in range(error_matrix.shape[1]):\n",
+    "        x = transition_points[error_matrix[:, i] == 0, 2*i  ]\n",
+    "        y = transition_points[error_matrix[:, i] == 0, 2*i+1]       \n",
+    "        trace = go.Scatter(x=x, y=y, name=labels[i])\n",
+    "        data.append(trace)\n",
+    "\n",
+    "    layout = go.Layout(\n",
+    "        title='Flow Pattern Map',\n",
+    "        width=800,\n",
+    "        height=650,\n",
+    "        showlegend=True,\n",
+    "        legend=dict(orientation=\"v\"),\n",
+    "        xaxis=dict(\n",
+    "            title='Gas Superficial Velocity [m/s]',\n",
+    "            type='log',\n",
+    "            range=(-3, 2),\n",
+    "            autotick=False,\n",
+    "        ),\n",
+    "        yaxis=dict(\n",
+    "            title='Liquid Superficial Velocity [m/s]',\n",
+    "            type='log',\n",
+    "            range=(-3, 2),\n",
+    "            autotick=False,\n",
+    "        )\n",
+    "    )\n",
+    "    fig = go.Figure(data=data, layout=layout)\n",
+    "    iplot(fig)"
    ]
   },
   {
